fixed the bug with screen not fitting because of the about me title having a transformX

--- a/src/Components/AboutMe/aboutme.css
+++ b/src/Components/AboutMe/aboutme.css
@@ -25,8 +25,7 @@
   border-top-right-radius: 100px;
   border-bottom-right-radius: 100px;
   width: 60%;
-  transform: translateX(85%);
-
+margin-left: 38%;
 }
 
 
